working version with some bugs like out of bounds frog and delayed game over on win

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ h1 {
   flex-direction: row;
   justify-content: space-between;
   height: 40px;
-  border-radius: 25px;
+  border-radius: 15px;
 }
 
 #board div div {
